Fix footer vertical alignment on larger screens
Add align-items: center to .div-block-89 to vertically align
"Thanks for visiting!" with "© 2025 Roarke Clinton"

--- a/css/styles.css
+++ b/css/styles.css
@@ -858,6 +858,7 @@ em { font-style: italic; }
 .div-block-89 {
   text-align: center;
   justify-content: space-between;
+  align-items: center;
   align-self: center;
   width: 94%;
   margin-top: auto;
